--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.DDC_OVGx.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Brixg6yA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/dpsjlapA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B12TRHGA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dhtpxh3M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D7eA-oBJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bp7gmpXD.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DAbMg_r4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.FPR085Tk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bzak7iHL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BA7AkUwT.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.TZ7n_yjm.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DFrJbvVE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuuK_G7L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C5QFJaWf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/hS5PVg1h.js">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_j0hmb6 = {
+					__sveltekit_17n8dp1 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -41,8 +41,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Brixg6yA.js"),
-						import("./_app/immutable/entry/app.DAbMg_r4.js")
+						import("./_app/immutable/entry/start.B12TRHGA.js"),
+						import("./_app/immutable/entry/app.FPR085Tk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
